@@ -15,6 +15,8 @@
     * Get the local charset via nl_langinfo(CODESET) when asking the DM to do ASCII-UNICODE conversions
     * Handle (and remove) leading spaces from ini entries
     * Fixed unicode conversion problems in SQLGetDiagField(W)
+    * missing terminating null in iusql
+    * add to the list of errno states that does not cause a create of the ini file
 
 26th-November-2011
 2.3.1
